# TTR-guide

./: README.md  package.json
.github/workflows/: backend.yml
api_try/: tsconfig.json
api_try/src/: index.ts  test-max-requests.ts  utils.ts
backend/: .env.example  Cargo.toml  Makefile  package.json  serverless-custom-domain.yml  serverless.yml
backend/.github/workflows/: main.yml
backend/src/modules/: config.rs  mod.rs  reed_api.rs
backend/src/modules/config/: mod.rs
backend/src/modules/data_collector/: mod.rs
backend/src/modules/db/: job_posts.rs  mod.rs  statistics.rs
backend/src/modules/gpt/: mod.rs  preprocess.rs  types.rs
backend/src/modules/process_job/: mod.rs  sqs.rs  types.rs
backend/src/modules/reed_api/: mod.rs  types.rs
backend/src/modules/statistics/: mod.rs  sqs.rs  types.rs
backend/src/tests/: gpt.rs  mod.rs  preprocess.rs  reed_api.rs
backend_serverless/: Cargo.toml  package.json  serverless.yml
backend_serverless/src/hello_world/: Cargo.toml
backend_serverless/src/hello_world/src/: main.rs
frontend/: .gitignore  next.config.js  package.json
frontend/components/DateRange/: DateRange.tsx
frontend/components/LocationAndType/: LocationAndType.tsx  index.ts
frontend/components/Logo/: Logo.tsx
frontend/components/Salary/: Salary.tsx
frontend/components/ScrollButton/: ScrollButton.tsx
frontend/components/Sorting/: Sorting.tsx
frontend/components/TechStatistics/: TechStatistics.tsx  index.ts
frontend/components/WordCloud/: WordCloud.tsx
frontend/pages/: _app.tsx  _document.tsx  api-docs.tsx  index.tsx  search.tsx  statistics.tsx
frontend/shared/: dark-theme.ts  styles.tsx  types.ts
iterations_and_learning/0-api_try/: .gitignore  package.json
iterations_and_learning/rustlings/: .gitignore
src/: types.ts
(+36 files in other folders)
