[package]
name = "api"
version = "0.1.0"
edition = "2018"

[dependencies]
lambda_http = "0.7"
lambda_runtime = "0.7"
tokio = { version = "1", features = ["macros"] }
futures = "0.3"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
tracing-test = "0.2"
serde = "1.0"
serde_dynamodb = "0.9"
rusoto_core = { version = "0.47", default-features = false, features = ["rustls"] }
rusoto_dynamodb = { version = "0.47", default-features = false, features = ["rustls"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
dotenv = "0.15.0"
regex = "1.7.3"
html2text = "0.5.0"
rust-stemmers = "1.2.0"
stop-words = "0.7.0"
