[package]
name = "api"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "hello-world"

[[bin]]
name = "json-try"

[dependencies]
lambda_http = "0.7"
lambda_runtime = "0.7"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
serde_json = "1.0"
serde = "1.0"
